--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <head>
-<meta charset="utf-8">
 <link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css' rel='stylesheet' type='text/css'>
 
 	<title>자바스크립트 실습</title>
@@ -8,6 +7,7 @@
 		input{font-size:1em;}
 		button{font-size:1em;}
 		body{font-size:2em;}
+		html {font-family: 'Spoqa Han Sans', 'Sans-serif'; }
 	</style>
 </head>
 
