--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <head>
-<meta charset="utf-8">
-<link href='https://spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css' rel='stylesheet' type='text/css'>
+<link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css' rel='stylesheet' type='text/css'>
 
 	<title>자바스크립트 실습</title>
 	<style>
@@ -15,13 +14,13 @@
 <body>
 	<h1 id="display">What's your standardWeight?</h1>
 	<input type="text" id="weight" placeholder="당신의 체중을 알려주세요.">kg
-	<input type="text" id="height" placeholder="당신의 키를 알려주세요." >cm
+	<input type="text" id="height" placeholder="당신의 키를 알려주세요.">cm
 	<button id="action">계산하기</button>
 
 	
 	<script>
 		action.onclick = function(){
-			console.log("OK");
+			console.log("OK",Math.ceil(1.7689));
 			var myWeight = weight.value;
 			var myHeight = height.value;
 			standardWeight(myWeight, myHeight);
@@ -29,25 +28,12 @@
 		}
 
 	function standardWeight(weight, height){
-		var standardWeight = (height - 100) * 0.9;
-		var dietWeight = weight - standardWeight;
-		var fatRate = (weight / standardWeight)*10;
-		//Math.ceil(a)
+		var standardWeight = Math.round(((height - 100) * 0.9)*100)/100;
+		var dietWeight = Math.round(((weight - standardWeight)*100)/100);
+		var fatRate = Math.round(((weight / standardWeight)*10)*100)/100;
 		var text = "당신의 표준 체중은" + standardWeight + "kg입니다.따라서 당신은 " + dietWeight + "kg을 감량해야합니다." + "현재 비만도는 " + fatRate + "%입니다.";
 		display.innerHTML = text;
-
 	}
 
 	</script>
 </body>
-
-
-<style>
-body{margin: 0 auto;margin-top:50px; width:800px;font-weight:300;}
-h2{font-weight:500;font-size:23px;}
-header{font-size: 60px;font-weight:700;}
-p{word-break:keep-all;text-align:left;font-size:18px;color:black;line-height:2}
-mark{opacity:10%;background:#E91E63;}
-img{width:800px;}
-html {font-family: 'Spoqa Han Sans', 'Sans-serif'; }
-</style>
